Ajustes na sessão de favoritos, e adição de elementos de identidade dos competidores

--- a/src/styles/_japanese.scss
+++ b/src/styles/_japanese.scss
@@ -129,6 +129,12 @@
             .japanese__img {
                 height: auto;
             }
+
+            &--mystery {
+                .japanese__img {
+                    height: 100%;
+                }
+            }
         }
 
         &--mystery {
