--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @use 'variables';
+@use 'components/buttons';
+@use 'components/flip-card';
 @use 'hero';
 @use 'legacy';
 @use 'qualify';
@@ -11,6 +13,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
