--- a/src/styles/_japanese.scss
+++ b/src/styles/_japanese.scss
@@ -83,57 +83,20 @@
     }
 
     &__frame {
-        perspective: 1000px;
         width: 220px;
         height: 220px;
-    }
-
-    &__img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        
-        &--zoom-top {
-            object-position: center top;
-            transform: scale(1.4);
-            transform-origin: top center;
-        }
-    }
-
-    &__card {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-        transform-style: preserve-3d;
-        cursor: pointer;
-
-        &:hover {
-            transform: rotateY(180deg);
-        }
 
         &__front, &__back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
             border-radius: 50%;
             border: 4px solid variables.$deep-blue;
-            overflow: hidden;
         }
 
         &__back {
-            transform: rotateY(180deg);
             border-color: variables.$wine-red;
+            align-items: start;
 
-            .japanese__img {
+            img {
                 height: auto;
-            }
-
-            &--mystery {
-                .japanese__img {
-                    height: 100%;
-                }
             }
         }
 
@@ -156,15 +119,24 @@
                 }
             }
             
-            .japanese__card__front {
+            .japanese__frame__front {
                 border-style: dashed; // Diferencia dos outros cards
                 border-color: rgba(variables.$white, 0.3);
             }
+
+            .japanese__frame__back {
+                align-items: center;
+            }
         }
+    }
+
+    &__img--zoom-top {
+        object-position: center top;
+        transform: scale(1.4);
+        transform-origin: top center;
     }
 }
 
-// Animação para o "?" não ficar estático
 @keyframes pulse-shadow {
     0% { transform: scale(1); opacity: 0.2; }
     50% { transform: scale(1.1); opacity: 0.8; color: variables.$wine-red; }
