--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @use 'components/buttons';
 @use 'components/flip-card';
 @use 'hero';
+@use 'prize';
 @use 'legacy';
 @use 'qualify';
 @use 'players';
