--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -11,7 +11,6 @@
     position: relative;
     text-align: center;
 
-    // Overlay para dar profundidade e unir as cores
     &::before {
         content: '';
         position: absolute;
@@ -59,8 +58,8 @@
         margin: 30px 0;
         font-family: monospace;
         display: block;
-        min-height: 4.5rem; // Reserve o espaço exato da altura da fonte + padding
-        font-family: 'Courier New', monospace; // Opcional: evita que números de larguras diferentes movam o texto
+        min-height: 4.5rem;
+        font-family: 'Courier New', monospace;
         font-size: 3rem;
         font-weight: bold;
         margin: 20px 0;
