--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,4 +4,5 @@ $wine-red: #c02a57;
 $dark: #050505;
 $white: #fff;
 
-$font-main: 'Teko', sans-serif;
+$font-title: 'Teko', sans-serif;
+$font-text: 'Inter', sans-serif; // Fonte para leitura
