--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -87,7 +87,7 @@
         padding: 30px 0;
         
         &__social__link {
-            font-size: 20px;
+            font-size: 1.2rem;
         }
     }
 }
