--- a/src/styles/_legacy.scss
+++ b/src/styles/_legacy.scss
@@ -1,8 +1,17 @@
 @use 'variables';
 
+
 .legacy {
     padding: 80px 0;
     background: linear-gradient(variables.$dark, variables.$deep-blue);
+
+    .title--medium {
+        text-align: center;
+        color: variables.$white;
+        font-family: variables.$font-title;
+        font-size: 2.5rem;
+        text-transform: uppercase;
+    }
 
     &__grid {
         display: grid;
