--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -31,9 +31,21 @@
     }
 
     &__logo {
+        width: 100%;
         max-width: 350px;
+        height: auto;
         margin-bottom: 40px;
         filter: drop-shadow(0 0 15px rgba(variables.$neon-green, 0.5));
+
+        @media (max-width: 480px) {
+            max-width: 280px; 
+        }
+    }
+
+    &__text {
+        @media (max-width: 480px) {
+            font-size: 1.8rem;
+        }
     }
 
     &__text {
