--- a/src/styles/_japanese.scss
+++ b/src/styles/_japanese.scss
@@ -8,7 +8,7 @@
 
     &__header {
         text-align: center;
-        padding: 50px;
+        padding: 50px 0;
         
         h2 {
             font-size: 2.5rem;
