--- a/src/styles/_prize.scss
+++ b/src/styles/_prize.scss
@@ -13,7 +13,6 @@
 
         @media (max-width: 768px) {
             flex-direction: column;
-            text-align: center;
         }
     }
 
@@ -21,15 +20,31 @@
         width: 50%;
 
         h2 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             color: variables.$neon-green;
+            text-transform: uppercase;
             margin-bottom: 24px;
             font-weight: 900;
+            text-align: center;
         }
 
         p {
-            font-size: 1.2rem;
-            line-height: 1.6;
+            font-size: 1.1rem;
+            opacity: 0.9;
+            text-align: justify;
+        }
+
+        @media (max-width: 768px) {
+            width: 100%;
+
+            h2 {
+                font-size: 2rem;
+                margin-bottom: 16px;
+            }
+
+            p {
+                font-size: 1rem;
+            }
         }
     }
 
