--- a/src/styles/_qualify.scss
+++ b/src/styles/_qualify.scss
@@ -20,10 +20,10 @@
     position: relative;
 
     &__header {
-        text-align: center;
         margin-bottom: 60px;
         
         h2 {
+            text-align: center;
             font-size: 2.5rem;
             color: variables.$neon-green;
             text-transform: uppercase;
@@ -31,6 +31,7 @@
         }
         
         p {
+            text-align: justify;
             font-size: 1.1rem;
             opacity: 0.8;
         }
@@ -99,7 +100,7 @@
     }
 
     &__text {
-        font-size: 0.95rem;
+        font-size: 1rem;
         line-height: 1.6;
         color: rgba(variables.$white, 0.7);
 
