--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,4 +5,4 @@ $dark: #050505;
 $white: #fff;
 
 $font-title: 'Teko', sans-serif;
-$font-text: 'Inter', sans-serif; // Fonte para leitura
+$font-text: 'Inter', sans-serif; 
