--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -5,7 +5,7 @@
     min-height: 80vh;
     display: flex;
     align-items: center;
-    background-image: url('../images/assets/fundo_hero.png');
+    background-image: url('../images/assets/fundo_hero.webp');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -53,6 +53,7 @@
         font-weight: 900;
         text-transform: uppercase;
         margin-bottom: 20px;
+        color: variables.$white;
         
         span {
             display: block;
