diminuindo  o offset padrão do aos, ajustando a altura inicial do hero

--- a/src/styles/_qualify.scss
+++ b/src/styles/_qualify.scss
@@ -15,7 +15,7 @@
 }
 
 .qualify {
-    padding: 100px 0;
+    padding: 100px 0 0;
     background-color: variables.$dark;
     position: relative;
 
