--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,8 +1,9 @@
 @use 'variables';
 
 .hero {
-    padding: 80px 0;
+    padding: 60px 0 80PX;
     min-height: 80vh;
+    min-height: 80dvh;
     display: flex;
     align-items: center;
     background-image: url('../images/assets/fundo_hero.webp');
