--- a/src/styles/_players.scss
+++ b/src/styles/_players.scss
@@ -21,6 +21,7 @@ $bg-color: linear-gradient(180deg,
         font-size: 2.5rem;
         text-transform: uppercase;
         letter-spacing: 1px;
+        padding-top: 100px;
     }
 
     span {
